# feedwatch

./: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
src/: lib.rs
src/models/: subscriptions.rs
src/views/: index.rs
static/: subscriptions.json
