[package]
name = "feedwatch"
publish = false
version = "0.0.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.16"
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"
textwrap = "0.16"
chrono = "0.4"
itertools = "0.10"

[profile.release]
lto = true
strip = true
codegen-units = 1
